--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,29 +1,17 @@
 {
   "manifest_version": 3,
-  "short_name": "React App",
   "name": "Purrodoro",
-  "version": "1.0",
   "description": "Cute ginger cat Pomodoro Timer",
+  "version": "1.0",
   "permissions": ["tabs", "activeTab", "scripting"],
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "action": {
+    "default_popup": "index.html",
+    "default_icon": "logo192.png"
+  },
+  "icons": {
+    "16": "favicon.ico",
+    "32": "favicon.ico",
+    "48": "logo192.png",
+    "128": "logo512.png"
+  }
 }
