--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Purrodoro",
   "description": "Cute ginger cat Pomodoro Timer",
   "version": "1.0",
-  "permissions": ["tabs", "activeTab", "scripting", "storage"],
+  "permissions": ["tabs", "activeTab", "scripting", "storage", "notifications"],
   "action": {
     "default_popup": "index.html",
     "default_icon": "logo192.png"
@@ -11,6 +11,9 @@
   "background": {
     "service_worker": "background.js"
   },
+  "host_permissions": [
+    "<all_urls>"
+  ],
   "icons": {
     "16": "favicon.ico",
     "32": "favicon.ico",
