--- a/public/manifest.json
+++ b/public/manifest.json
@@ -15,9 +15,9 @@
     "<all_urls>"
   ],
   "icons": {
-    "16": "favicon.ico",
-    "32": "favicon.ico",
-    "48": "logo192.png",
-    "128": "logo512.png"
+    "16": "icon.png",
+    "32": "icon.png",
+    "48": "icon.png",
+    "128": "icon.png"
   }
 }
